<resources>
    <string name="app_name">Enhanced News</string>
    <string name="image">Image</string>
    <string name="briefing_header">Briefing notifications</string>
    <string name="briefing_content">Get notified when your daily briefing is ready each morning</string>
    <string name="briefing_subscribe">SUBSCRIBE</string>
    <string name="briefing_no_thanks">NO THANKS</string>
    <string name="settings">SETTINGS</string>
    <string name="share">SHARE</string>

    <style name="rounderCorner">
        <item name="cornerSize">10%</item>
        <item name="cornerFamily">rounded</item>
    </style>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_settings">fragment_settings</string>
    <string name="home">HOME</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>